[package]
name = "jito-geyser-protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
prost = "0.11.6"
prost-types = "0.11.6"
serde = "1.0.152"
tonic = "0.8.3"
pkg-utils = { path = "../pkg-utils" }

[build-dependencies]
tonic-build = "0.8.4"