[package]
name = "jito-searcher-client"
version = "0.1.0"
edition = "2021"

[dependencies]
jito-searcher-protos = { path = "../searcher-protos" }
bincode = "1.3.3"
bytes = "1.4"
futures = "0.3"
futures-util = "0.3"
log = "0.4.17"
prost-types = "0.11.8"
pkg-utils = { path = "../pkg-utils" }
thiserror = "1.0.39"
tokio = { version = "1.14.1", features = ["full"] }
tonic = { version = "0.8.3", features = ["tls"] }